[workspace]
members = [
    "lightning-cli",
    "lightning-nf/datawarp",
    "lightning-nf/infinisync",
    # Remove Post testing
    "testing",
    "utils/client",
    "utils/parsing",
]
resolver = "2"

[workspace.package]
name = "unifyair-core"
version = "0.1.0"
edition = "2021"
authors = ["UnifyAir Maintainers <maintainers@unifyair.com>"]
repository = "https://bitbucket.org/blocknet/unifyair-core"
homepage = "https://unifyair.com/"
description = "UnifyAir 5g Core"
publish = false

[workspace.dependencies]
url = { version = "2.5.3" }
pfcp = { path = "../pfcp/pfcp", package = "pfcp" }
tower-http = { version = "0.6.1", features = ["full"] }
bytes = { version = "1.8.0" }
# pfcp-ie = { git = "ssh://git@bitbucket.org/blocknet/pfcp.git/", branch = "master", package = "ie" }
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
futures-core = "0.3"
percent-encoding = "2.3"
regress = "0.10"
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "stream",
] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
oasbi = { git = "ssh://git@bitbucket.org/blocknet/openapi-5gc.git/", branch = "master", package = "oasbi" }
openapi-smf = { git = "ssh://git@bitbucket.org/blocknet/openapi-5gc.git/", branch = "master", package = "openapi-smf", features = [
    "server",
] }
openapi-nrf = { git = "ssh://git@bitbucket.org/blocknet/openapi-5gc.git/", branch = "master", package = "openapi-nrf", features = [
    "server",
] }
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
axum = { version = "0.7" }
tracing-subscriber = "0.3"
tracing = { version = "0.1.0" }
thiserror = { version = "2.0.3" }
oauth2 = { version = "4.4.2" }
tower = { version = "0.5.1", features = ["full"] }
http = { version = "1.1.0" }
pin-project-lite = "0.2.15"
serde_with = { version = "3.11.0" }
formatx = { version = "0.2.2" }
clap = { version = "4.5.4", features = ["cargo"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
http-body-util = "0.1.2"
tower-reqwest = "0.4.0"

[net]
git-fetch-with-cli = true
