[workspace]
members = ["lightning-cli", "lightning-nf/omnipath/app", "utils/*"]
resolver = "2"

[workspace.package]
name = "unifyair-core"
version = "0.1.0"
edition = "2024"
authors = ["UnifyAir Maintainers <maintainers@unifyair.com>"]
repository = "https://bitbucket.org/blocknet/unifyair-core"
homepage = "https://unifyair.com/"
description = "UnifyAir 5g Core"
publish = false
readme = "README.md"

[workspace.dependencies]
url = { version = "2.5.3" }
pfcp = { path = "../pfcp/pfcp", package = "pfcp" }
tower-http = { version = "0.6.1", features = ["full"] }
bytes = { version = "1.8.0" }
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
futures-core = "0.3"
percent-encoding = "2.3"
regress = "0.10"
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "stream",
] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.11.0", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_qs = "0.13.0"
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
axum = { version = "0.7" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.0", features = ["valuable"] }
thiserror = { version = "2.0.3" }
oauth2 = { version = "4.4.2" }
tower = { version = "0.5.1", features = ["full"] }
http = { version = "1.1.0" }
pin-project-lite = "0.2.15"
formatx = { version = "0.2.2" }
clap = { version = "4.5.4", features = ["cargo", "string"] }
http-body-util = "0.1.2"
tower-reqwest = "0.4.0"
color-eyre = "0.6"
tracing-error = "0.2.1"

asn1_codecs_derive = "0.7.0"
asn1-codecs = "0.7.0"
smart-default = "0.7.1"
log = "0.4.21"
enum-as-inner = "0.6.1"
tokio-util = { version = "0.7.13", features = ["full"] }
arc-swap = "1.7.1"
serde_valid = "0.25"
versions = { version = "6.3.2", features = ["serde"] }
treediff = { version = "5.0.0", features = ["serde_json", "with-serde-json"] }
mediatype = "0.19"
scc = "2.2.6"
rustc-hash = "2.1"
solana-nohash-hasher = "0.2.1"
tokio-sctp = "0.2.0"
valuable = "0.1.0"

# Depenedency of tokio-sctp
socket2 = "0.4"
derive-new = "0.7"
faster-hex = "0.10.0"
nonempty = { version = "0.8.1", features = ["serialize"] }
bitvec = "1.0.1"

oasbi = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "oasbi", branch = "master" }
openapi-smf = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "openapi-smf", features = [
    "server",
], branch = "master" }
openapi-chf = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "openapi-chf", features = [
    "server",
], branch = "master" }
openapi-pcf = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "openapi-pcf", features = [
    "server",
], branch = "master" }
openapi-udm = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "openapi-udm", features = [
    "server",
], branch = "master" }
openapi-nrf = { git = "ssh://git@github.com/UnifyAir/open-api.git/", package = "openapi-nrf", features = [
    "server",
], branch = "master" }
ngap-models = { git = "ssh://git@github.com/UnifyAir/asn-models.git/", package = "ngap", branch = "master" }
asn1-per = { git = "ssh://git@github.com/UnifyAir/asn-models.git/", package = "asn1-per", branch = "master" }

