[package]
name = "lightning-cli"
description = "A CLI for the Lightning Network"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
datawarp = { path = "../lightning-nf/datawarp" }
infinisync = { path = "../lightning-nf/infinisync" }
omnipath = { path = "../lightning-nf/omnipath" }
tokio = { workspace = true, features = ["full"] }
serde_yaml = { workspace = true }
oasbi.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-error.workspace = true
nf-base = { path = "../utils/nf-base" }
tokio-util.workspace = true