[package]
name = "infinisync"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
common_utils = { path = "../../common_utils" }
messages = {git = "https://github.com/workerwork/rust-pfcp.git", branch = "master", as = "pfcp-messages"}