[package]
name = "infinisync"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfcp = { workspace = true, features = ["rel-15"] }
serde.workspace = true
serde_yaml.workspace = true
oasbi.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
openapi-smf.workspace = true
parsing = { path = "../../utils/parsing" }
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
pfcp = { workspace = true, features = ["tests", "default"] }
