[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
pin-project-lite.workspace = true
oasbi.workspace = true
openapi-nrf.workspace = true
http.workspace = true
serde_urlencoded.workspace = true
serde.workspace = true
# serde.json = true
serde_json.workspace = true
serde_with.workspace = true
formatx.workspace = true
hyper-util = "0.1.10"
tower-reqwest.workspace = true
url.workspace = true
uuid.workspace = true
tracing.workspace = true
mediatype.workspace = true
serde_qs.workspace = true
scc.workspace = true
arc-swap.workspace = true
tokio.workspace = true
rustc-hash.workspace = true
counter = { path = "../counter" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "csv_output"] }
dashmap = "6.1.0"
futures = "0.3"


[[bench]]
name = "token_store_bench"
harness = false
