[package]
name = "nf-base"
description = "Traits for building base app"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
client = { path = "../client" }
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio-util.workspace = true
axum.workspace = true