[package]
name = "omnipath-app"
description = "high performance amf repo"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
oasbi.workspace = true
openapi-nrf.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
openapi-smf.workspace = true
bytes.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tower.workspace = true
log.workspace = true
enum-as-inner.workspace = true
smart-default.workspace = true
asn1-codecs.workspace = true
bitvec.workspace = true
asn1_codecs_derive.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
arc-swap.workspace = true
serde_valid.workspace = true
tracing.workspace = true
serde_with.workspace = true
serde_json = "1.0.134"
treediff.workspace = true
tokio-sctp.workspace = true
socket2.workspace = true
rustc-hash.workspace = true
solana-nohash-hasher.workspace = true
ngap-models.workspace = true

config = { path = "../config", package = "omnipath-config" }
ngap = { path = "../ngap", package = "omnipath-ngap" }
counter = { path = "../../../utils/counter" }
client = { path = "../../../utils/client" }
nf-base = { path = "../../../utils/nf-base" }
