[package]
name = "omnipath-config"
description = "OmniPath Configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
serde_valid.workspace = true
serde_with.workspace = true
tokio-sctp.workspace = true
serde_yaml.workspace = true
serde.workspace = true
oasbi.workspace = true
smart-default.workspace = true
versions.workspace = true
nf-base = { path = "../../../utils/nf-base" }